--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,5 +17,4 @@ jobs:
         with:
           node-version: 20.x
       - run: npm install
-      - run: npm lint
-      - run: npm test
+      - run: npm run lint
