--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently 'nuxt dev' 'npm run dev:db'",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -13,10 +14,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/icon": "^2.1.0",
     "@nuxtjs/color-mode": "^4.0.0",
     "@tailwindcss/vite": "^4.1.17",
+    "concurrently": "^9.2.1",
+    "drizzle-orm": "^0.44.7",
     "nuxt": "^4.2.0",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
@@ -27,6 +31,7 @@
     "@antfu/eslint-config": "^6.1.0",
     "@types/node": "^24.10.1",
     "daisyui": "^5.4.5",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
     "husky": "^9.1.7",
