--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/icon": "^2.1.0",
     "@nuxtjs/color-mode": "^4.0.0",
     "@tailwindcss/vite": "^4.1.17",
+    "better-auth": "^1.3.34",
     "concurrently": "^9.2.1",
     "drizzle-orm": "^0.44.7",
     "nuxt": "^4.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.1.0",
+    "@better-auth/cli": "^1.3.34",
     "@types/node": "^24.10.1",
     "daisyui": "^5.4.5",
     "drizzle-kit": "^0.31.7",
